Add references in report

--- a/report/egbib.bib
+++ b/report/egbib.bib
@@ -1,48 +1,4 @@
 
-@misc{Authors14,
- author = {Authors},
- title = {The frobnicatable foo filter},
- note = {Face and Gesture  submission ID 324. Supplied as additional material {\tt fg324.pdf}},
- year = 2014
-}
-
-@misc{Authors14b,
- author = {Authors},
- title = {Frobnication tutorial},
- note = {Supplied as additional material {\tt tr.pdf}},
- year = 2014
-}
-
-@article{Alpher02,
-author = {A. Alpher},
-title = {Frobnication},
-journal = {Journal of Foo},
-volume = 12, 
-number = 1, 
-pages = {234--778}, 
-year = 2002
-}
-
-@article{Alpher03,
-author = {A. Alpher and  J.~P.~N. Fotheringham-Smythe},
-title = {Frobnication revisited},
-journal = {Journal of Foo},
-volume = 13, 
-number = 1, 
-pages = {234--778}, 
-year = 2003
-}
-
-@article{Alpher04,
-author = {A. Alpher and J.~P.~N. Fotheringham-Smythe and G. Gamow},
-title = {Can a machine frobnicate?},
-journal = {Journal of Foo},
-volume = 14, 
-number = 1, 
-pages = {234--778}, 
-year = 2004
-}
-
 @article{DBLP:journals/corr/MnihKSGAWR13,
 	author    = {Volodymyr Mnih and
 	Koray Kavukcuoglu and
@@ -103,3 +59,15 @@ year = 2004
 }
 
 @misc{humancontrol, title={Human-level control through deep reinforcement learning}, url={https://www.nature.com/articles/nature14236}, journal={Nature News}, publisher={Nature Publishing Group}, author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A. and Veness, Joel and Bellemare, Marc G. and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K. and Ostrovski, Georg and et al.}, year={2015}, month={Feb}}
+
+@misc{ptan,
+	title = {Ptan Agent Library},
+	howpublished = {\url{https://github.com/Shmuma/ptan}},
+	note = {Accessed: 2019-05-10}
+}
+
+@misc{packtrepo,
+	title = {Deep-Reinforcement-Learning-Hands-On Github Repository},
+	howpublished = {\url{https://github.com/PacktPublishing/Deep-Reinforcement-Learning-Hands-On/tree/master/Chapter07}},
+	note = {Accessed: 2019-05-10}
+}
